# quickbooks-project

./: CLAUDE.md  README.md
.claude/: settings.json
quickbooks-dataengineering-frontend/: .env.example  README.md  index.html  package-lock.json  (+2 more)
quickbooks-dataengineering-pipeline/: .env.example  .gitignore  README.md  ask.py  main.py  pyproject.toml  repo_bootstrap.py  requirements.txt  server.py
quickbooks-dataengineering-pipeline/airflow/dags/: qbo_n8n_sync_dag.py
quickbooks-dataengineering-pipeline/data/: response.json
quickbooks-dataengineering-pipeline/src/qbo_pipeline/: __init__.py  config.py  observability.py
quickbooks-dataengineering-pipeline/src/qbo_pipeline/db/: pool.py
quickbooks-dataengineering-pipeline/src/qbo_pipeline/etl/: __init__.py  extract.py  load.py  pipeline.py  run.py  transform.py  validate.py
quickbooks-dataengineering-pipeline/src/qbo_pipeline/qa/: __init__.py  answer_structure.py  context_window.py  dynamic_sql.py  gemini_retry.py  llm_complete.py  small_talk.py  warehouse_qa.py
quickbooks-dataengineering-pipeline/src/qbo_pipeline/warehouse/: __init__.py  analytics_queries.py  sql_snapshot.py
quickbooks-dataengineering-pipeline/src/qbo_pipeline/web/: __init__.py  app.py
quickbooks-dataengineering-pipeline/supabase/migrations/: 001_init.sql  002_sync_runs_upsert_counters.sql
quickbooks-dataengineering-pipeline/tests/: test_answer_structure.py  test_api_app.py  test_context_window.py  test_dynamic_sql.py  test_gemini_retry.py  test_qa_sanitize.py  test_small_talk.py  test_transform.py  test_warehouse_qa_planner.py
(+75 files in other folders)
